// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QuizEditor > should render QuizEditor for classic mode 1`] = `
<div>
  <div
    class="quizEditor"
  >
    <div
      class="details"
    >
      <div
        class="column"
      >
        <div
          class="textFieldInputContainer"
        >
          <input
            class="textfield"
            data-testid="test-quiz-title-textfield-textfield"
            id="quiz-title-textfield"
            name="quiz-title-textfield"
            placeholder="Title"
            type="text"
            value="My Classic Quiz"
          />
        </div>
        <div
          class="textareaInputContainer"
        >
          <textarea
            data-testid="test-quiz-description-textarea-textarea"
            id="quiz-description-textarea"
            name="quiz-description-textarea"
            placeholder="Description"
          />
        </div>
      </div>
      <div
        class="column"
      >
        <div
          class="selectInputContainer"
        >
          <select
            data-testid="test-quiz-mode-select-select"
            id="quiz-mode-select"
            name="quiz-mode-select"
          >
            <option
              value="CLASSIC"
            >
              Classic
            </option>
            <option
              value="ZERO_TO_ONE_HUNDRED"
            >
              0 to 100
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            color="black"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="selectInputContainer"
        >
          <select
            data-testid="test-quiz-visibility-select-select"
            id="quiz-visibility-select"
            name="quiz-visibility-select"
          >
            <option
              value="PUBLIC"
            >
              Public
            </option>
            <option
              value="PRIVATE"
            >
              Private
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            color="black"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="textFieldInputContainer"
        >
          <input
            class="textfield"
            data-testid="test-quiz-image-cover-textfield-textfield"
            id="quiz-image-cover-textfield"
            name="quiz-image-cover-textfield"
            placeholder="Image Cover URL"
            type="text"
            value=""
          />
        </div>
        <div
          class="selectInputContainer"
        >
          <select
            data-testid="test-quiz-language-select-select"
            id="quiz-language-select"
            name="quiz-language-select"
          >
            <option
              value="ab"
            >
              Abkhaz
            </option>
            <option
              value="aa"
            >
              Afar
            </option>
            <option
              value="af"
            >
              Afrikaans
            </option>
            <option
              value="ak"
            >
              Akan
            </option>
            <option
              value="sq"
            >
              Albanian
            </option>
            <option
              value="am"
            >
              Amharic
            </option>
            <option
              value="ar"
            >
              Arabic
            </option>
            <option
              value="an"
            >
              Aragonese
            </option>
            <option
              value="hy"
            >
              Armenian
            </option>
            <option
              value="as"
            >
              Assamese
            </option>
            <option
              value="av"
            >
              Avaric
            </option>
            <option
              value="ae"
            >
              Avestan
            </option>
            <option
              value="ay"
            >
              Aymara
            </option>
            <option
              value="az"
            >
              Azerbaijani
            </option>
            <option
              value="bm"
            >
              Bambara
            </option>
            <option
              value="ba"
            >
              Bashkir
            </option>
            <option
              value="eu"
            >
              Basque
            </option>
            <option
              value="be"
            >
              Belarusian
            </option>
            <option
              value="bn"
            >
              Bengali
            </option>
            <option
              value="bh"
            >
              Bihari
            </option>
            <option
              value="bi"
            >
              Bislama
            </option>
            <option
              value="bs"
            >
              Bosnian
            </option>
            <option
              value="br"
            >
              Breton
            </option>
            <option
              value="bg"
            >
              Bulgarian
            </option>
            <option
              value="my"
            >
              Burmese
            </option>
            <option
              value="ca"
            >
              Catalan
            </option>
            <option
              value="ch"
            >
              Chamorro
            </option>
            <option
              value="ce"
            >
              Chechen
            </option>
            <option
              value="ny"
            >
              Chichewa
            </option>
            <option
              value="zh"
            >
              Chinese
            </option>
            <option
              value="cu"
            >
              Church Slavonic
            </option>
            <option
              value="cv"
            >
              Chuvash
            </option>
            <option
              value="kw"
            >
              Cornish
            </option>
            <option
              value="co"
            >
              Corsican
            </option>
            <option
              value="cr"
            >
              Cree
            </option>
            <option
              value="hr"
            >
              Croatian
            </option>
            <option
              value="cs"
            >
              Czech
            </option>
            <option
              value="da"
            >
              Danish
            </option>
            <option
              value="dv"
            >
              Dhivehi
            </option>
            <option
              value="nl"
            >
              Dutch
            </option>
            <option
              value="dz"
            >
              Dzongkha
            </option>
            <option
              value="en"
            >
              English
            </option>
            <option
              value="eo"
            >
              Esperanto
            </option>
            <option
              value="et"
            >
              Estonian
            </option>
            <option
              value="ee"
            >
              Ewe
            </option>
            <option
              value="fo"
            >
              Faroese
            </option>
            <option
              value="fj"
            >
              Fijian
            </option>
            <option
              value="fi"
            >
              Finnish
            </option>
            <option
              value="fr"
            >
              French
            </option>
            <option
              value="ff"
            >
              Fula
            </option>
            <option
              value="gl"
            >
              Galician
            </option>
            <option
              value="lg"
            >
              Ganda
            </option>
            <option
              value="ka"
            >
              Georgian
            </option>
            <option
              value="de"
            >
              German
            </option>
            <option
              value="el"
            >
              Greek
            </option>
            <option
              value="gn"
            >
              Guarani
            </option>
            <option
              value="gu"
            >
              Gujarati
            </option>
            <option
              value="ht"
            >
              Haitian
            </option>
            <option
              value="ha"
            >
              Hausa
            </option>
            <option
              value="he"
            >
              Hebrew
            </option>
            <option
              value="hz"
            >
              Herero
            </option>
            <option
              value="hi"
            >
              Hindi
            </option>
            <option
              value="ho"
            >
              Hiri Motu
            </option>
            <option
              value="hu"
            >
              Hungarian
            </option>
            <option
              value="is"
            >
              Icelandic
            </option>
            <option
              value="io"
            >
              Ido
            </option>
            <option
              value="ig"
            >
              Igbo
            </option>
            <option
              value="id"
            >
              Indonesian
            </option>
            <option
              value="ia"
            >
              Interlingua
            </option>
            <option
              value="ie"
            >
              Interlingue
            </option>
            <option
              value="iu"
            >
              Inuktitut
            </option>
            <option
              value="ik"
            >
              Inupiaq
            </option>
            <option
              value="ga"
            >
              Irish
            </option>
            <option
              value="it"
            >
              Italian
            </option>
            <option
              value="ja"
            >
              Japanese
            </option>
            <option
              value="jv"
            >
              Javanese
            </option>
            <option
              value="kl"
            >
              Kalaallisut
            </option>
            <option
              value="kn"
            >
              Kannada
            </option>
            <option
              value="kr"
            >
              Kanuri
            </option>
            <option
              value="ks"
            >
              Kashmiri
            </option>
            <option
              value="kk"
            >
              Kazakh
            </option>
            <option
              value="km"
            >
              Khmer
            </option>
            <option
              value="ki"
            >
              Kikuyu
            </option>
            <option
              value="rw"
            >
              Kinyarwanda
            </option>
            <option
              value="rn"
            >
              Kirundi
            </option>
            <option
              value="kv"
            >
              Komi
            </option>
            <option
              value="kg"
            >
              Kongo
            </option>
            <option
              value="ko"
            >
              Korean
            </option>
            <option
              value="ku"
            >
              Kurdish
            </option>
            <option
              value="kj"
            >
              Kwanyama
            </option>
            <option
              value="ky"
            >
              Kyrgyz
            </option>
            <option
              value="lo"
            >
              Lao
            </option>
            <option
              value="la"
            >
              Latin
            </option>
            <option
              value="lv"
            >
              Latvian
            </option>
            <option
              value="li"
            >
              Limburgish
            </option>
            <option
              value="ln"
            >
              Lingala
            </option>
            <option
              value="lt"
            >
              Lithuanian
            </option>
            <option
              value="lu"
            >
              Luba-Katanga
            </option>
            <option
              value="lb"
            >
              Luxembourgish
            </option>
            <option
              value="mk"
            >
              Macedonian
            </option>
            <option
              value="mg"
            >
              Malagasy
            </option>
            <option
              value="ms"
            >
              Malay
            </option>
            <option
              value="ml"
            >
              Malayalam
            </option>
            <option
              value="mt"
            >
              Maltese
            </option>
            <option
              value="gv"
            >
              Manx
            </option>
            <option
              value="mr"
            >
              Marathi
            </option>
            <option
              value="mh"
            >
              Marshallese
            </option>
            <option
              value="mn"
            >
              Mongolian
            </option>
            <option
              value="mi"
            >
              Maori
            </option>
            <option
              value="na"
            >
              Nauru
            </option>
            <option
              value="nv"
            >
              Navajo
            </option>
            <option
              value="ng"
            >
              Ndonga
            </option>
            <option
              value="ne"
            >
              Nepali
            </option>
            <option
              value="nd"
            >
              Northern Ndebele
            </option>
            <option
              value="se"
            >
              Northern Sami
            </option>
            <option
              value="nb"
            >
              Norwegian Bokmål
            </option>
            <option
              value="nn"
            >
              Norwegian Nynorsk
            </option>
            <option
              value="ii"
            >
              Nuosu
            </option>
            <option
              value="oc"
            >
              Occitan
            </option>
            <option
              value="oj"
            >
              Ojibwe
            </option>
            <option
              value="or"
            >
              Oriya
            </option>
            <option
              value="om"
            >
              Oromo
            </option>
            <option
              value="os"
            >
              Ossetian
            </option>
            <option
              value="ps"
            >
              Pashto
            </option>
            <option
              value="fa"
            >
              Persian
            </option>
            <option
              value="pl"
            >
              Polish
            </option>
            <option
              value="pt"
            >
              Portuguese
            </option>
            <option
              value="pa"
            >
              Punjabi
            </option>
            <option
              value="pi"
            >
              Pali
            </option>
            <option
              value="qu"
            >
              Quechua
            </option>
            <option
              value="ro"
            >
              Romanian
            </option>
            <option
              value="rm"
            >
              Romansh
            </option>
            <option
              value="ru"
            >
              Russian
            </option>
            <option
              value="sm"
            >
              Samoan
            </option>
            <option
              value="sg"
            >
              Sango
            </option>
            <option
              value="sa"
            >
              Sanskrit
            </option>
            <option
              value="sc"
            >
              Sardinian
            </option>
            <option
              value="gd"
            >
              Scottish Gaelic
            </option>
            <option
              value="sr"
            >
              Serbian
            </option>
            <option
              value="sn"
            >
              Shona
            </option>
            <option
              value="sd"
            >
              Sindhi
            </option>
            <option
              value="si"
            >
              Sinhala
            </option>
            <option
              value="sk"
            >
              Slovak
            </option>
            <option
              value="sl"
            >
              Slovene
            </option>
            <option
              value="so"
            >
              Somali
            </option>
            <option
              value="nr"
            >
              Southern Ndebele
            </option>
            <option
              value="st"
            >
              Southern Sotho
            </option>
            <option
              value="es"
            >
              Spanish
            </option>
            <option
              value="su"
            >
              Sundanese
            </option>
            <option
              value="sw"
            >
              Swahili
            </option>
            <option
              value="ss"
            >
              Swati
            </option>
            <option
              value="sv"
            >
              Swedish
            </option>
            <option
              value="tl"
            >
              Tagalog
            </option>
            <option
              value="ty"
            >
              Tahitian
            </option>
            <option
              value="tg"
            >
              Tajik
            </option>
            <option
              value="ta"
            >
              Tamil
            </option>
            <option
              value="tt"
            >
              Tatar
            </option>
            <option
              value="te"
            >
              Telugu
            </option>
            <option
              value="th"
            >
              Thai
            </option>
            <option
              value="bo"
            >
              Tibetan
            </option>
            <option
              value="ti"
            >
              Tigrinya
            </option>
            <option
              value="to"
            >
              Tongan
            </option>
            <option
              value="ts"
            >
              Tsonga
            </option>
            <option
              value="tn"
            >
              Tswana
            </option>
            <option
              value="tr"
            >
              Turkish
            </option>
            <option
              value="tk"
            >
              Turkmen
            </option>
            <option
              value="tw"
            >
              Twi
            </option>
            <option
              value="ug"
            >
              Uighur
            </option>
            <option
              value="uk"
            >
              Ukrainian
            </option>
            <option
              value="ur"
            >
              Urdu
            </option>
            <option
              value="uz"
            >
              Uzbek
            </option>
            <option
              value="ve"
            >
              Venda
            </option>
            <option
              value="vi"
            >
              Vietnamese
            </option>
            <option
              value="vo"
            >
              Volapük
            </option>
            <option
              value="wa"
            >
              Walloon
            </option>
            <option
              value="cy"
            >
              Welsh
            </option>
            <option
              value="fy"
            >
              West Frisian
            </option>
            <option
              value="wo"
            >
              Wolof
            </option>
            <option
              value="xh"
            >
              Xhosa
            </option>
            <option
              value="yi"
            >
              Yiddish
            </option>
            <option
              value="yo"
            >
              Yoruba
            </option>
            <option
              value="za"
            >
              Zhuang
            </option>
            <option
              value="zu"
            >
              Zulu
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            color="black"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="questionEditor"
    >
      <div
        class="textareaInputContainer code"
      >
        <textarea
          data-testid="test-quiz-question-editor-textarea-textarea"
          id="quiz-question-editor-textarea"
          name="quiz-question-editor-textarea"
          placeholder="Questions"
        >
          [
  {
    "type": "MULTI_CHOICE",
    "question": "",
    "media": {
      "type": "IMAGE",
      "url": ""
    },
    "options": [
      {
        "value": "",
        "correct": false
      },
      {
        "value": "",
        "correct": false
      },
      {
        "value": "",
        "correct": false
      },
      {
        "value": "",
        "correct": false
      }
    ],
    "points": 1000,
    "duration": 30
  },
  {
    "type": "RANGE",
    "question": "",
    "media": {
      "type": "IMAGE",
      "url": ""
    },
    "min": 0,
    "max": 100,
    "margin": "MEDIUM",
    "correct": 50,
    "points": 1000,
    "duration": 30
  },
  {
    "type": "TRUE_FALSE",
    "question": "",
    "media": {
      "type": "IMAGE",
      "url": ""
    },
    "correct": true,
    "points": 1000,
    "duration": 30
  },
  {
    "type": "TYPE_ANSWER",
    "question": "",
    "media": {
      "type": "IMAGE",
      "url": ""
    },
    "options": [
      ""
    ],
    "points": 1000,
    "duration": 30
  }
]
        </textarea>
      </div>
      <div
        class="error"
      >
        Invalid value for field 'media.url'. Value did not pass custom validation.
      </div>
    </div>
  </div>
</div>
`;

exports[`QuizEditor > should render QuizEditor for zero to one hundred mode 1`] = `
<div>
  <div
    class="quizEditor"
  >
    <div
      class="details"
    >
      <div
        class="column"
      >
        <div
          class="textFieldInputContainer"
        >
          <input
            class="textfield"
            data-testid="test-quiz-title-textfield-textfield"
            id="quiz-title-textfield"
            name="quiz-title-textfield"
            placeholder="Title"
            type="text"
            value="My ZeroToOneHundred Quiz"
          />
        </div>
        <div
          class="textareaInputContainer"
        >
          <textarea
            data-testid="test-quiz-description-textarea-textarea"
            id="quiz-description-textarea"
            name="quiz-description-textarea"
            placeholder="Description"
          />
        </div>
      </div>
      <div
        class="column"
      >
        <div
          class="selectInputContainer"
        >
          <select
            data-testid="test-quiz-mode-select-select"
            id="quiz-mode-select"
            name="quiz-mode-select"
          >
            <option
              value="CLASSIC"
            >
              Classic
            </option>
            <option
              value="ZERO_TO_ONE_HUNDRED"
            >
              0 to 100
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            color="black"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="selectInputContainer"
        >
          <select
            data-testid="test-quiz-visibility-select-select"
            id="quiz-visibility-select"
            name="quiz-visibility-select"
          >
            <option
              value="PUBLIC"
            >
              Public
            </option>
            <option
              value="PRIVATE"
            >
              Private
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            color="black"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="textFieldInputContainer"
        >
          <input
            class="textfield"
            data-testid="test-quiz-image-cover-textfield-textfield"
            id="quiz-image-cover-textfield"
            name="quiz-image-cover-textfield"
            placeholder="Image Cover URL"
            type="text"
            value=""
          />
        </div>
        <div
          class="selectInputContainer"
        >
          <select
            data-testid="test-quiz-language-select-select"
            id="quiz-language-select"
            name="quiz-language-select"
          >
            <option
              value="ab"
            >
              Abkhaz
            </option>
            <option
              value="aa"
            >
              Afar
            </option>
            <option
              value="af"
            >
              Afrikaans
            </option>
            <option
              value="ak"
            >
              Akan
            </option>
            <option
              value="sq"
            >
              Albanian
            </option>
            <option
              value="am"
            >
              Amharic
            </option>
            <option
              value="ar"
            >
              Arabic
            </option>
            <option
              value="an"
            >
              Aragonese
            </option>
            <option
              value="hy"
            >
              Armenian
            </option>
            <option
              value="as"
            >
              Assamese
            </option>
            <option
              value="av"
            >
              Avaric
            </option>
            <option
              value="ae"
            >
              Avestan
            </option>
            <option
              value="ay"
            >
              Aymara
            </option>
            <option
              value="az"
            >
              Azerbaijani
            </option>
            <option
              value="bm"
            >
              Bambara
            </option>
            <option
              value="ba"
            >
              Bashkir
            </option>
            <option
              value="eu"
            >
              Basque
            </option>
            <option
              value="be"
            >
              Belarusian
            </option>
            <option
              value="bn"
            >
              Bengali
            </option>
            <option
              value="bh"
            >
              Bihari
            </option>
            <option
              value="bi"
            >
              Bislama
            </option>
            <option
              value="bs"
            >
              Bosnian
            </option>
            <option
              value="br"
            >
              Breton
            </option>
            <option
              value="bg"
            >
              Bulgarian
            </option>
            <option
              value="my"
            >
              Burmese
            </option>
            <option
              value="ca"
            >
              Catalan
            </option>
            <option
              value="ch"
            >
              Chamorro
            </option>
            <option
              value="ce"
            >
              Chechen
            </option>
            <option
              value="ny"
            >
              Chichewa
            </option>
            <option
              value="zh"
            >
              Chinese
            </option>
            <option
              value="cu"
            >
              Church Slavonic
            </option>
            <option
              value="cv"
            >
              Chuvash
            </option>
            <option
              value="kw"
            >
              Cornish
            </option>
            <option
              value="co"
            >
              Corsican
            </option>
            <option
              value="cr"
            >
              Cree
            </option>
            <option
              value="hr"
            >
              Croatian
            </option>
            <option
              value="cs"
            >
              Czech
            </option>
            <option
              value="da"
            >
              Danish
            </option>
            <option
              value="dv"
            >
              Dhivehi
            </option>
            <option
              value="nl"
            >
              Dutch
            </option>
            <option
              value="dz"
            >
              Dzongkha
            </option>
            <option
              value="en"
            >
              English
            </option>
            <option
              value="eo"
            >
              Esperanto
            </option>
            <option
              value="et"
            >
              Estonian
            </option>
            <option
              value="ee"
            >
              Ewe
            </option>
            <option
              value="fo"
            >
              Faroese
            </option>
            <option
              value="fj"
            >
              Fijian
            </option>
            <option
              value="fi"
            >
              Finnish
            </option>
            <option
              value="fr"
            >
              French
            </option>
            <option
              value="ff"
            >
              Fula
            </option>
            <option
              value="gl"
            >
              Galician
            </option>
            <option
              value="lg"
            >
              Ganda
            </option>
            <option
              value="ka"
            >
              Georgian
            </option>
            <option
              value="de"
            >
              German
            </option>
            <option
              value="el"
            >
              Greek
            </option>
            <option
              value="gn"
            >
              Guarani
            </option>
            <option
              value="gu"
            >
              Gujarati
            </option>
            <option
              value="ht"
            >
              Haitian
            </option>
            <option
              value="ha"
            >
              Hausa
            </option>
            <option
              value="he"
            >
              Hebrew
            </option>
            <option
              value="hz"
            >
              Herero
            </option>
            <option
              value="hi"
            >
              Hindi
            </option>
            <option
              value="ho"
            >
              Hiri Motu
            </option>
            <option
              value="hu"
            >
              Hungarian
            </option>
            <option
              value="is"
            >
              Icelandic
            </option>
            <option
              value="io"
            >
              Ido
            </option>
            <option
              value="ig"
            >
              Igbo
            </option>
            <option
              value="id"
            >
              Indonesian
            </option>
            <option
              value="ia"
            >
              Interlingua
            </option>
            <option
              value="ie"
            >
              Interlingue
            </option>
            <option
              value="iu"
            >
              Inuktitut
            </option>
            <option
              value="ik"
            >
              Inupiaq
            </option>
            <option
              value="ga"
            >
              Irish
            </option>
            <option
              value="it"
            >
              Italian
            </option>
            <option
              value="ja"
            >
              Japanese
            </option>
            <option
              value="jv"
            >
              Javanese
            </option>
            <option
              value="kl"
            >
              Kalaallisut
            </option>
            <option
              value="kn"
            >
              Kannada
            </option>
            <option
              value="kr"
            >
              Kanuri
            </option>
            <option
              value="ks"
            >
              Kashmiri
            </option>
            <option
              value="kk"
            >
              Kazakh
            </option>
            <option
              value="km"
            >
              Khmer
            </option>
            <option
              value="ki"
            >
              Kikuyu
            </option>
            <option
              value="rw"
            >
              Kinyarwanda
            </option>
            <option
              value="rn"
            >
              Kirundi
            </option>
            <option
              value="kv"
            >
              Komi
            </option>
            <option
              value="kg"
            >
              Kongo
            </option>
            <option
              value="ko"
            >
              Korean
            </option>
            <option
              value="ku"
            >
              Kurdish
            </option>
            <option
              value="kj"
            >
              Kwanyama
            </option>
            <option
              value="ky"
            >
              Kyrgyz
            </option>
            <option
              value="lo"
            >
              Lao
            </option>
            <option
              value="la"
            >
              Latin
            </option>
            <option
              value="lv"
            >
              Latvian
            </option>
            <option
              value="li"
            >
              Limburgish
            </option>
            <option
              value="ln"
            >
              Lingala
            </option>
            <option
              value="lt"
            >
              Lithuanian
            </option>
            <option
              value="lu"
            >
              Luba-Katanga
            </option>
            <option
              value="lb"
            >
              Luxembourgish
            </option>
            <option
              value="mk"
            >
              Macedonian
            </option>
            <option
              value="mg"
            >
              Malagasy
            </option>
            <option
              value="ms"
            >
              Malay
            </option>
            <option
              value="ml"
            >
              Malayalam
            </option>
            <option
              value="mt"
            >
              Maltese
            </option>
            <option
              value="gv"
            >
              Manx
            </option>
            <option
              value="mr"
            >
              Marathi
            </option>
            <option
              value="mh"
            >
              Marshallese
            </option>
            <option
              value="mn"
            >
              Mongolian
            </option>
            <option
              value="mi"
            >
              Maori
            </option>
            <option
              value="na"
            >
              Nauru
            </option>
            <option
              value="nv"
            >
              Navajo
            </option>
            <option
              value="ng"
            >
              Ndonga
            </option>
            <option
              value="ne"
            >
              Nepali
            </option>
            <option
              value="nd"
            >
              Northern Ndebele
            </option>
            <option
              value="se"
            >
              Northern Sami
            </option>
            <option
              value="nb"
            >
              Norwegian Bokmål
            </option>
            <option
              value="nn"
            >
              Norwegian Nynorsk
            </option>
            <option
              value="ii"
            >
              Nuosu
            </option>
            <option
              value="oc"
            >
              Occitan
            </option>
            <option
              value="oj"
            >
              Ojibwe
            </option>
            <option
              value="or"
            >
              Oriya
            </option>
            <option
              value="om"
            >
              Oromo
            </option>
            <option
              value="os"
            >
              Ossetian
            </option>
            <option
              value="ps"
            >
              Pashto
            </option>
            <option
              value="fa"
            >
              Persian
            </option>
            <option
              value="pl"
            >
              Polish
            </option>
            <option
              value="pt"
            >
              Portuguese
            </option>
            <option
              value="pa"
            >
              Punjabi
            </option>
            <option
              value="pi"
            >
              Pali
            </option>
            <option
              value="qu"
            >
              Quechua
            </option>
            <option
              value="ro"
            >
              Romanian
            </option>
            <option
              value="rm"
            >
              Romansh
            </option>
            <option
              value="ru"
            >
              Russian
            </option>
            <option
              value="sm"
            >
              Samoan
            </option>
            <option
              value="sg"
            >
              Sango
            </option>
            <option
              value="sa"
            >
              Sanskrit
            </option>
            <option
              value="sc"
            >
              Sardinian
            </option>
            <option
              value="gd"
            >
              Scottish Gaelic
            </option>
            <option
              value="sr"
            >
              Serbian
            </option>
            <option
              value="sn"
            >
              Shona
            </option>
            <option
              value="sd"
            >
              Sindhi
            </option>
            <option
              value="si"
            >
              Sinhala
            </option>
            <option
              value="sk"
            >
              Slovak
            </option>
            <option
              value="sl"
            >
              Slovene
            </option>
            <option
              value="so"
            >
              Somali
            </option>
            <option
              value="nr"
            >
              Southern Ndebele
            </option>
            <option
              value="st"
            >
              Southern Sotho
            </option>
            <option
              value="es"
            >
              Spanish
            </option>
            <option
              value="su"
            >
              Sundanese
            </option>
            <option
              value="sw"
            >
              Swahili
            </option>
            <option
              value="ss"
            >
              Swati
            </option>
            <option
              value="sv"
            >
              Swedish
            </option>
            <option
              value="tl"
            >
              Tagalog
            </option>
            <option
              value="ty"
            >
              Tahitian
            </option>
            <option
              value="tg"
            >
              Tajik
            </option>
            <option
              value="ta"
            >
              Tamil
            </option>
            <option
              value="tt"
            >
              Tatar
            </option>
            <option
              value="te"
            >
              Telugu
            </option>
            <option
              value="th"
            >
              Thai
            </option>
            <option
              value="bo"
            >
              Tibetan
            </option>
            <option
              value="ti"
            >
              Tigrinya
            </option>
            <option
              value="to"
            >
              Tongan
            </option>
            <option
              value="ts"
            >
              Tsonga
            </option>
            <option
              value="tn"
            >
              Tswana
            </option>
            <option
              value="tr"
            >
              Turkish
            </option>
            <option
              value="tk"
            >
              Turkmen
            </option>
            <option
              value="tw"
            >
              Twi
            </option>
            <option
              value="ug"
            >
              Uighur
            </option>
            <option
              value="uk"
            >
              Ukrainian
            </option>
            <option
              value="ur"
            >
              Urdu
            </option>
            <option
              value="uz"
            >
              Uzbek
            </option>
            <option
              value="ve"
            >
              Venda
            </option>
            <option
              value="vi"
            >
              Vietnamese
            </option>
            <option
              value="vo"
            >
              Volapük
            </option>
            <option
              value="wa"
            >
              Walloon
            </option>
            <option
              value="cy"
            >
              Welsh
            </option>
            <option
              value="fy"
            >
              West Frisian
            </option>
            <option
              value="wo"
            >
              Wolof
            </option>
            <option
              value="xh"
            >
              Xhosa
            </option>
            <option
              value="yi"
            >
              Yiddish
            </option>
            <option
              value="yo"
            >
              Yoruba
            </option>
            <option
              value="za"
            >
              Zhuang
            </option>
            <option
              value="zu"
            >
              Zulu
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down selectIcon"
            color="black"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="questionEditor"
    >
      <div
        class="textareaInputContainer code"
      >
        <textarea
          data-testid="test-quiz-question-editor-textarea-textarea"
          id="quiz-question-editor-textarea"
          name="quiz-question-editor-textarea"
          placeholder="Questions"
        >
          [
  {
    "type": "RANGE",
    "question": "",
    "media": {
      "type": "IMAGE",
      "url": ""
    },
    "correct": 50,
    "duration": 30
  }
]
        </textarea>
      </div>
      <div
        class="error"
      >
        Invalid value for field 'media.url'. Value did not pass custom validation.
      </div>
    </div>
  </div>
</div>
`;
